user api implementation and testing (#11)
* user api implementation and testing

* user api implementation and testing

---------
